@@ -9,6 +9,8 @@
     fix cannot unset plugin key combo assignment
     added configure option --with-gtk2 to force gtk2 only build
     mount curlftpfs in terminal for password entry #251
+    update custom protocol handler script in manual to use run_in_terminal
+    mouse back/fwd buttons work anywhere in window
 0.8.5   2013-01-14:
     fix left-click ignored in Open context submenu #31 #228
     Dialog fix progress bar; add auto-pulse
